--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
 
-logging.level.root=DEBUG
-
 limits-service.minimum=100
 limits-service.maximum=200
+
+logging.level.org.springframework.web=ERROR
+
 
