Added log level as INFO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.config.import=optional:configserver:http://localhost:8888
 limits-service.minimum=100
 limits-service.maximum=200
 
-logging.level.org.springframework.web=ERROR
+logging.level.org.springframework.web=INFO
 
 
